[gd_scene load_steps=8 format=3 uid="uid://bqvpfp1l7hj2u"]

[ext_resource type="PackedScene" uid="uid://d2htt0g2a0f7h" path="res://player.tscn" id="1_0shv4"]
[ext_resource type="Script" path="res://main.gd" id="1_ssdn0"]
[ext_resource type="PackedScene" uid="uid://daqypclehyomv" path="res://hud.tscn" id="4_0xen6"]
[ext_resource type="PackedScene" uid="uid://c3ycamawyteb3" path="res://level.tscn" id="4_w4c1s"]
[ext_resource type="Texture2D" uid="uid://dlsgq88843bpf" path="res://art/background_temp.png" id="5_melip"]
[ext_resource type="AudioStream" uid="uid://cugvmivqdphxy" path="res://sound/Folklore_v1-Loopable.wav" id="7_y41d6"]
[ext_resource type="AudioStream" uid="uid://bo84sruke6yx4" path="res://sound/Folklore_SFX_backgorund sfx.wav" id="8_niwm0"]

[node name="Main" type="Node"]
script = ExtResource("1_ssdn0")

[node name="BackgroundTemp" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_melip")
centered = false

[node name="Player" parent="." instance=ExtResource("1_0shv4")]
position = Vector2(638, 600)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)

[node name="Level" parent="." instance=ExtResource("4_w4c1s")]

[node name="HUD" parent="." instance=ExtResource("4_0xen6")]

[node name="DaytimeTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_y41d6")
bus = &"Music Bus"

[node name="BackgroundSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_niwm0")
bus = &"SFX Bus"

[connection signal="died" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="update_health"]
[connection signal="won" from="Player" to="." method="game_over"]
[connection signal="end_game" from="HUD" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="DaytimeTimer" to="." method="_on_daytime_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
